<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_cellyse"

        />


    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_below="@+id/select_un"
        android:layout_centerHorizontal="true"
        android:width="333dp"
        android:height="41dp"
        android:background="@drawable/button"
        android:text="@string/daftar_button"
        android:textColor="@color/white"
        />


    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/sudahakun1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:autoLink="all"
            android:textSize="17sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/sudahakun2"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"

            android:gravity="center_horizontal|top"
            android:text="@string/snk1" />

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center_horizontal|top"
                android:text="@string/snk2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:autoLink="all"
                android:gravity="center_horizontal"
                android:linksClickable="false"
                android:selectAllOnFocus="false"
                android:textColor="@color/black"
                android:text="@string/snk3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center_horizontal|top"
                android:text="@string/snk4" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/snk5"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>