<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:gravity="center"
    >
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_1"
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_square"
        android:elevation="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_cellyse"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:text="@string/sapaan_daftar"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:text="@string/desk_daftar"
            android:textColor="@color/txtGrayColor"
            android:textSize="14dp"

            />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Masukkan Nama anda"
            android:textSize="14sp"
            android:textColor="@color/txtInpColor"
            android:background="@drawable/bg_input"
            android:height="40dp"
            android:width="265dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="26dp"
            />
        <EditText
            android:id="@+id/input_nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Masukkan nomor handphone"
            android:textSize="14sp"
            android:textColor="@color/txtInpColor"
            android:background="@drawable/bg_input"
            android:height="40dp"
            android:width="265dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:id="@+id/input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Masukkan email anda"
            android:textSize="14sp"
            android:textColor="@color/txtInpColor"
            android:background="@drawable/bg_input"
            android:height="40dp"
            android:width="265dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:id="@+id/input_pass"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:hint="Masukkan Password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:textColor="@color/txtInpColor"
            android:background="@drawable/bg_input"
            android:height="40dp"
            android:width="265dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:id="@+id/input_repass"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:hint="Masukkan ulang Password"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:textColor="@color/txtInpColor"
            android:background="@drawable/bg_input"
            android:height="40dp"
            android:width="265dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="12dp" />

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/sudahakun1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:autoLink="all"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:textColor="@color/cellyseColor"
                android:linksClickable="false"
                android:selectAllOnFocus="false"
                android:text="@string/sudahakun2"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/select_un"
            android:layout_centerHorizontal="true"
            android:width="265dp"
            android:height="21dp"
            android:background="@drawable/button"
            android:text="@string/daftar_button"
            android:textColor="@color/white"
            />




    </LinearLayout>




</LinearLayout>